[gd_scene load_steps=4 format=3 uid="uid://yi0qo5jarv75"]

[ext_resource type="FontFile" uid="uid://kur8ylb5ry6e" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="1_iob53"]
[ext_resource type="Script" uid="uid://cxspfjqgd88pr" path="res://Common/IconButton.gd" id="1_w31aw"]
[ext_resource type="Script" uid="uid://meg4m8umy7m6" path="res://addons/fontawesome/FontAwesome.gd" id="2_w31aw"]

[node name="IconButton" type="Button" unique_id=1635265080]
modulate = Color(1, 1, 1, 0.7490196)
custom_minimum_size = Vector2(20, 20)
offset_right = 20.0
offset_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_default_cursor_shape = 2
flat = true
script = ExtResource("1_w31aw")

[node name="Icon" type="Label" parent="." unique_id=977660375]
auto_translate_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false
theme_override_fonts/font = ExtResource("1_iob53")
theme_override_font_sizes/font_size = 16
text = "ÔÅô"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_w31aw")

[connection signal="button_down" from="." to="." method="onButtonDown"]
[connection signal="button_up" from="." to="." method="onButtonUp"]
[connection signal="mouse_entered" from="." to="." method="onMouseEntered"]
[connection signal="mouse_exited" from="." to="." method="onMouseExited"]
